View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030804 | Open CASCADE | OCCT:Foundation Classes | public | 2019-06-24 12:50 | 2019-07-08 12:58 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.3.1 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030804: Foundation Classes - Poly_Connect crashes due to out-of-range array modification | ||||
Description | Poly_Connect crashes on some triangulations due to out-of-range memory access. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION restore bug30804.brep b vclear vinit View1 vdisplay b vfit Result: Error: AIS_Shape::Compute() wireframe presentation builder has failed (ACCESS VIOLATION at address 0xFFFFFFFFFFFFFFFF during 'READ' operation) | ||||
Tags | No tags attached. | ||||
Test case number | bugs fclasses bug30804 | ||||
|
bug30804.brep (183,890 bytes) |
|
Branch CR30804 has been created by kgv. SHA-1: 50493c95b9250876ed9926c00df4bf30c5579638 Detailed log of new commits: Author: kgv Date: Mon Jun 24 13:07:04 2019 +0300 0030804: Foundation Classes - Poly_Connect crash due to out-of-range array modification Fixed initialization of edges array based on the wrong statement. |
|
Branch CR30804 has been updated forcibly by kgv. SHA-1: 68948e0c59e652a55f3f4c4f0820fe9f6bb39731 |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30804-master-KGV |
|
- src/Poly/Poly_Connect.cxx line 129-130, 166, 181-182 - The comments are not relevant with new variables The attached shape has not been put into data base before testing, so obviously the test case has failed. I've put the shape into data base now. Please restart the failing test cases. |
|
Testing results: http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30804-master-KGV-2/view/COMPARE/ |
|
Branch CR30804 has been updated by kgv. SHA-1: 90cf086785b5eacd96c80d7b07a600987cb922a3 Detailed log of new commits: Author: kgv Date: Tue Jun 25 11:29:25 2019 +0300 # updated comments |
|
line 166 - please change "fore each edge in triangle" to "for each edge in triangle" |
|
Branch CR30804 has been updated forcibly by kgv. SHA-1: f87de7f799eb2859e726cb45579a3c86c6b30378 |
|
Misprint fixed. |
|
Reviewed. |
|
Combination - OCCT branch : CR30804 master SHA - 68948e0c59e652a55f3f4c4f0820fe9f6bb39731 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - c08b242c9da615bfdf83ca463321740d4cc22898 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16475.69 / 16513.620000000094 [-0.23%] Products Total CPU difference: 10489.11000000006 / 10515.620000000044 [-0.25%] Windows-64-VC14: OCCT Total CPU difference: 17802.03125 / 17822.375 [-0.11%] Products Total CPU difference: 12072.71875 / 12126.671875 [-0.44%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30804 has been deleted by inv. SHA-1: f87de7f799eb2859e726cb45579a3c86c6b30378 |
occt: master 841aa8c4 2019-06-25 16:39:49 Committer: apn Details Diff |
0030804: Foundation Classes - Poly_Connect crashes due to out-of-range array modification Fixed initialization of edges array based on the wrong statement. |
Affected Issues 0030804 |
|
mod - src/Poly/Poly_Connect.cxx | Diff File | ||
add - tests/bugs/fclasses/bug30804 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-06-24 12:50 | kgv | New Issue | |
2019-06-24 12:50 | kgv | Assigned To | => abv |
2019-06-24 13:01 | kgv | Steps to Reproduce Updated | |
2019-06-24 13:01 | kgv | File Added: bug30804.brep | |
2019-06-24 13:05 | kgv | Summary | Foundation Classes - Poly_Connect crash due to out-of-range array modification => Foundation Classes - Poly_Connect crashes due to out-of-range array modification |
2019-06-24 13:08 | git | Note Added: 0085258 | |
2019-06-24 13:09 | git | Note Added: 0085260 | |
2019-06-24 15:06 | kgv | Product Version | 7.3.0 => 6.3.1 |
2019-06-24 17:07 | kgv | Note Added: 0085264 | |
2019-06-24 17:07 | kgv | Assigned To | abv => emv |
2019-06-24 17:07 | kgv | Status | new => resolved |
2019-06-25 08:49 |
|
Note Added: 0085274 | |
2019-06-25 08:49 |
|
Assigned To | emv => kgv |
2019-06-25 08:49 |
|
Status | resolved => assigned |
2019-06-25 11:26 | kgv | Note Added: 0085280 | |
2019-06-25 11:26 | kgv | Assigned To | kgv => emv |
2019-06-25 11:26 | kgv | Status | assigned => resolved |
2019-06-25 11:30 | git | Note Added: 0085283 | |
2019-06-25 12:16 |
|
Assigned To | emv => kgv |
2019-06-25 12:16 |
|
Status | resolved => assigned |
2019-06-25 12:16 |
|
Note Added: 0085287 | |
2019-06-25 12:31 | git | Note Added: 0085288 | |
2019-06-25 12:32 | kgv | Note Added: 0085289 | |
2019-06-25 12:32 | kgv | Assigned To | kgv => emv |
2019-06-25 12:32 | kgv | Status | assigned => resolved |
2019-06-25 12:32 |
|
Note Added: 0085290 | |
2019-06-25 12:32 |
|
Assigned To | emv => bugmaster |
2019-06-25 12:32 |
|
Status | resolved => reviewed |
2019-06-25 12:51 | apn | Test case number | => bugs fclasses bug30804 |
2019-06-25 13:08 | apn | Note Added: 0085294 | |
2019-06-25 13:08 | apn | Status | reviewed => tested |
2019-07-01 17:28 | apn | Changeset attached | => occt master 841aa8c4 |
2019-07-01 17:28 | apn | Assigned To | bugmaster => apn |
2019-07-01 17:28 | apn | Status | tested => verified |
2019-07-01 17:28 | apn | Resolution | open => fixed |
2019-07-08 12:58 | git | Note Added: 0085477 |