0030804: Foundation Classes - Poly_Connect crashes due to out-of-range array modification

Fixed initialization of edges array based on the wrong statement.